upgraded to java 21 and writing repository tests for custom query